# Jarvis

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
brain/: __init__.py  llm.py  session.py
coding/: __init__.py  code_explainer.py  coding_manager.py  error_analyzer.py  project_context.py  repository_indexer.py  task_tracker.py
computer_control/: __init__.py  executor.py  models.py  planner.py  text.py
computer_control/resolvers/: __init__.py  applications.py  filesystem.py  websites.py
core/: __init__.py  audit.py  config.py  constants.py  exceptions.py  logger.py
data/: memory.sqlite3  memory.sqlite3-shm  memory.sqlite3-wal
memory/: __init__.py  memory_intents.py  memory_manager.py  memory_models.py  memory_query_engine.py  memory_retriever.py  memory_store.py  memory_summarizer.py  memory_types.py
modes/: __init__.py  mode_manager.py  modes.py
router/: __init__.py  intents.py  router.py
security/: __init__.py  permissions.py
shared/: __init__.py  models.py  responses.py  utils.py
tests/: test_computer_control_architecture.py  test_foundation.py  test_phase4_phase5.py  test_phase55_hardening.py  test_phase61_memory_stabilization.py  test_phase62_memory_architecture.py  test_phase6_memory.py  test_phase7_coding.py  test_reliability_hardening.py
tools/: base_tool.py  command_parsing.py  registry.py
tools/applications/: __init__.py  manager.py  tool.py
tools/browser/: controller.py  tool.py
tools/coding/: __init__.py  tool.py
voice/: __init__.py  diagnostics.py  microphone.py  stt.py  tts.py  voice_manager.py
(+10 files in other folders)
